err/products.imagerepository.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/ImageRepository'...
Listing './lib/python3.5/site-packages/Products/ImageRepository/browser'...
Listing './lib/python3.5/site-packages/Products/ImageRepository/content'...
Listing './lib/python3.5/site-packages/Products/ImageRepository/i18n'...
Listing './lib/python3.5/site-packages/Products/ImageRepository/profiles'...
Listing './lib/python3.5/site-packages/Products/ImageRepository/profiles/default'...
Listing './lib/python3.5/site-packages/Products/ImageRepository/profiles/default/types'...
Listing './lib/python3.5/site-packages/Products/ImageRepository/resources'...
Listing './lib/python3.5/site-packages/Products/ImageRepository/skins'...
Listing './lib/python3.5/site-packages/Products/ImageRepository/skins/ImageRepository'...
Compiling './lib/python3.5/site-packages/Products/ImageRepository/skins/ImageRepository/imagerepository_collectionInfos.py'...
***   File "./lib/python3.5/site-packages/Products/ImageRepository/skins/ImageRepository/imagerepository_collectionInfos.py", line 266
    return res
             ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/Products/ImageRepository/tests'...
Listing './lib/python3.5/site-packages/Products/ImageRepository/tests/input'...
Compiling './lib/python3.5/site-packages/Products/ImageRepository/tests/testImageRepository.py'...
***   File "./lib/python3.5/site-packages/Products/ImageRepository/tests/testImageRepository.py", line 66
    print results
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/Products.ImageRepository-1.0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
